// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DruxtField boolean - form 1`] = `
"<div data=\\"true\\">
  <div data=\\"true\\" errors=\\"\\" schema=\\"[object Object]\\" value=\\"true\\"><label><strong data=\\"true\\">Status:</strong><br>
      <div><input data=\\"true\\" type=\\"checkbox\\"></div></label></div>
</div>"
`;

exports[`DruxtField datetime - form 1`] = `
"<div data=\\"2021-10-25T00:48:44+00:00\\">
  <div data=\\"2021-10-25T00:48:44+00:00\\" errors=\\"\\" schema=\\"[object Object]\\" value=\\"2021-10-25T00:48:44+00:00\\"><label><strong data=\\"2021-10-25T00:48:44+00:00\\">Created:</strong><br>
      <div><input data=\\"2021-10-25T00:48:44+00:00\\" type=\\"datetime-local\\"></div></label></div>
</div>"
`;

exports[`DruxtField fallback - form 1`] = `
"<div data=\\"[object Object]\\">
  <div data=\\"[object Object]\\" errors=\\"\\" schema=\\"[object Object]\\" value=\\"[object Object]\\"><label><strong data=\\"[object Object]\\">Path:</strong><br>
      <div><textarea data=\\"[object Object]\\"></textarea></div></label></div>
</div>"
`;

exports[`DruxtField file - view 1`] = `
"<div data=\\"[object Object]\\">
  <div data=\\"[object Object]\\" errors=\\"\\" relationship=\\"true\\" schema=\\"[object Object]\\" value=\\"[object Object]\\">
    <div data=\\"[object Object]\\">
      <div data=\\"[object Object]\\" entity=\\"[object Object]\\" value=\\"[object Object]\\"><a target=\\"_blank\\" href=\\"/sites/default/files/mediterranean-quiche-umami.jpg\\">mediterranean-quiche-umami.jpg</a></div>
    </div>
  </div>
</div>"
`;

exports[`DruxtField image - view 1`] = `
"<div data=\\"[object Object]\\">
  <div data=\\"[object Object]\\" errors=\\"\\" relationship=\\"true\\" schema=\\"[object Object]\\" value=\\"[object Object]\\">
    <div data=\\"[object Object]\\">
      <div data=\\"[object Object]\\" entity=\\"[object Object]\\" value=\\"[object Object]\\"><img src=\\"/sites/default/files/mediterranean-quiche-umami.jpg\\"></div>
    </div>
  </div>
</div>"
`;

exports[`DruxtField link - view 1`] = `
"<div data=\\"[object Object]\\">
  <div data=\\"[object Object]\\" errors=\\"\\" schema=\\"[object Object]\\" value=\\"[object Object]\\"><a data=\\"[object Object]\\" href=\\"https://druxtjs.org\\" target=\\"_blank\\">DruxtJS</a></div>
</div>"
`;

exports[`DruxtField text - form 1`] = `
"<div data=\\"About Umami\\">
  <div data=\\"About Umami\\" errors=\\"\\" schema=\\"[object Object]\\" value=\\"About Umami\\"><label><strong data=\\"About Umami\\">Title:</strong><br>
      <div><input data=\\"About Umami\\"></div></label></div>
</div>"
`;
